Added Nav Buttons to Bottom of Viewer
-Added HTML img for Back and Forward
-Added HTML loader for webpack
-Nav code is in Index.js

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+<!-- 	<style>
+
+	</Style> -->
   </head>
   <body>
-    <div id="root" />
+    <div id="root" /> 
+	<img name="jsback" src="./assets/icons/back.png") alt="back button" title="Back" 
+	style="width:23px; height:23px; position:absolute; margin:auto;
+	left:-15px; right:15px; bottom:10px; z-index:1;">
+	<img name="jsforward" src="./assets/icons/forward.png") alt="forward button" title="Forward" 
+	style="width:23px; height:23px; position:absolute; margin:auto;
+	left:15px; right:-15px; bottom:10px; z-index:1;">
   </body>
 </html>
