--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root" />
+    <div id="root" /> 
+	<img name="jsback" src="./assets/icons/back.png") alt="back button" title="Back" 
+	style="width:23px; height:23px; position:absolute; margin:auto;
+	left:-15px; right:15px; bottom:10px; z-index:1;">
+	<img name="jsforward" src="./assets/icons/forward.png") alt="forward button" title="Forward" 
+	style="width:23px; height:23px; position:absolute; margin:auto;
+	left:15px; right:-15px; bottom:10px; z-index:1;">
   </body>
 </html>
