--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
   <body>
     <div id="container">
       <button id="toggle" type="button">Toggle</button>
+      <button id="update" type="button">Update</button>
       <div class="infoPane hidePane">
-        <h1>Great Gateway</h1>
-        <p>The Great Gateway marks the entrance to Winthrop Hall and connects Winthrop Hall and the Administration Building. It houses the Senate Chamber on the first floor, where the governing body of the university meets. In the words of The University of Western Australia Act 1911 the Senate has “the entire control and management of the affairs of the University and may act in all matters concerning the University in such manner as appears to it best calculated to promote the interests of the University”. Lighting in the Senate chamber was mounted on a pedestal Grecian columns with lights installed on columns which are both classical and art nouveau in derivation and are similar to lights found at Yale University but were uncommon in Perth at the time. The flanking towers of the Gate are square at the base and octagonal at the top, which was supposed to liken it to the Tudor gateways of Oxford and Cambridge colleges. The stained-glass window was commissioned in memory of William Hancock, pioneer radiologist and former member of the University Senate.</p>
-        <img src="https://news.uwa.edu.au/files/imagecache/story_body/UWA_image_for_news_website.jpg">
+        <h1 id="poiTitle">Great Gateway</h1>
+        <p id="poiInfo">The Great Gateway marks the entrance to Winthrop Hall and connects Winthrop Hall and the Administration Building. It houses the Senate Chamber on the first floor, where the governing body of the university meets. In the words of The University of Western Australia Act 1911 the Senate has “the entire control and management of the affairs of the University and may act in all matters concerning the University in such manner as appears to it best calculated to promote the interests of the University”. Lighting in the Senate chamber was mounted on a pedestal Grecian columns with lights installed on columns which are both classical and art nouveau in derivation and are similar to lights found at Yale University but were uncommon in Perth at the time. The flanking towers of the Gate are square at the base and octagonal at the top, which was supposed to liken it to the Tudor gateways of Oxford and Cambridge colleges. The stained-glass window was commissioned in memory of William Hancock, pioneer radiologist and former member of the University Senate.</p>
+        <img id="poiImage" src="https://news.uwa.edu.au/files/imagecache/story_body/UWA_image_for_news_website.jpg">
       </div>
       <div id="root" class="full" />
     </div>
