--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <div id="root" /> 
     <div class="nav-buttons">
       <img name="jsback" src="./assets/icons/back.png") alt="back button" title="Back" class="nav-button back">
+	  <img name="jshome" src="./assets/icons/home.png") alt="home button" title="Home" class="nav-button home">
       <img name="jsforward" src="./assets/icons/forward.png") alt="forward button" title="Forward" class="nav-button forward">
     </div>
   </body>
