Add prefetched images

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
       <div id="controls"></div>
       <div id="root"></div>
       <div id="map"></div>
+      <div id="prefetch"></div>
     </div>
   </body>
 </html>
