--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,10 @@
         </ul>
 
         <p>
+          Information and content supplied by the UWA Archives and the UWA Historical Society.
+        </p>
+
+        <p>
           For further information contact: uwahs@uwa.edu.au or visit our website
           at: www.web.uwa.edu.au/uwahs
         </p>
