updated postname titles

--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,10 @@
         <ul>
           <li>Ronald Bodycoat Architect AM LFRAIA</li>
           <li>Dr Fran Pesich BArch MBA DBA FAICD</li>
-          <li>Mihaela Safta PMP</li>
+          <li>Mihaela Safta BEng(Hons)</li>
           <li>Michael Wise Associate Professor, BA BEng PhD NSW</li>
-          <li>Maria Carvalho ASAAP, RIMPA (UWA Archivist)</li>
-          <li>Lesley Annamalay (full title to be added)</li>
+          <li>Maria Carvalho ASAAP, RIMPA, University Archivist </li>
+          <li>Lesley Annamalay Team leader, Records Management Services </li>
           <li>UWA Archives</li>
         </ul>
 
