edited post name information per client request

--- a/src/index.html
+++ b/src/index.html
@@ -50,12 +50,12 @@
         The UWA Historical Society would also like to thank:
 
         <ul>
-          <li>Ronald Bodycoat Architect AM LFRAIA</li>
-          <li>Dr Fran Pesich BArch MBA DBA FAICD</li>
-          <li>Mihaela Safta BEng(Hons)</li>
-          <li>Michael Wise Associate Professor, BA BEng PhD NSW</li>
-          <li>Maria Carvalho ASAAP, RIMPA, University Archivist </li>
-          <li>Lesley Annamalay Team leader, Records Management Services </li>
+          <li>Ronald Bodycoat AM LFRAIA</li>
+          <li>Fran Pesich BArch MBA DBA FAICD</li>
+          <li>Mihaela Safta BEng MBS PMP AIMM</li>
+          <li>Michael Wise Associate Professor BA BEng PhD</li>
+          <li>Maria Carvalho University Archivist BA GradDipRecMgmtArchiv ASAAP RIMPA</li>
+          <li>Lesley Annamalay Team Leader Records Management Services UWA Archives BA BA(Ed) MEd MIM RIMPA</li>
           <li>UWA Archives</li>
         </ul>
 
