--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,8 @@
           <li>Mihaela Safta BEng MBS PMP AIMM</li>
           <li>Michael Wise Associate Professor BA BEng PhD</li>
           <li>Maria Carvalho University Archivist BA GradDipRecMgmtArchiv ASAAP RIMPA</li>
-          <li>Lesley Annamalay Team Leader Records Management Services UWA Archives BA BA(Ed) MEd MIM RIMPA</li>
+          <li>Lesley Annamalay Team Leader Records Management Services UWA Archives BA BA(Ed) MEd RIMPA ASA AIIM</li>
+          
           <li>UWA Archives</li>
         </ul>
 
