Update title style

--- a/src/index.html
+++ b/src/index.html
@@ -50,12 +50,12 @@
         The UWA Historical Society would also like to thank:
 
         <ul>
-          <li>Ronald Bodycoat AM LFRAIA</li>
-          <li>Fran Pesich BArch MBA DBA FAICD</li>
-          <li>Mihaela Safta BEng MBS PMP AIMM</li>
-          <li>Michael Wise Associate Professor BA BEng PhD</li>
-          <li>Maria Carvalho University Archivist BA GradDipRecMgmtArchiv ASAAP RIMPA</li>
-          <li>Lesley Annamalay Team Leader Records Management Services UWA Archives BA BA(Ed) MEd RIMPA ASA AIIM</li>
+          <li>Ronald Bodycoat <small><i>AM LFRAIA</i></small></li>
+          <li>Fran Pesich <small><i>BArch MBA DBA FAICD</i></small></li>
+          <li>Mihaela Safta <small><i>BEng MBS PMP AIMM</i></small></li>
+          <li>Michael Wise <small><i>Associate Professor BA BEng PhD</i></small></li>
+          <li>Maria Carvalho <small><i>University Archivist BA GradDipRecMgmtArchiv ASAAP RIMPA</i></small></li>
+          <li>Lesley Annamalay <small><i>Team Leader Records Management Services UWA Archives BA BA(Ed) MEd RIMPA ASA AIIM</i></small></li>
         </ul>
 
         <p>
