--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,18 @@
         <p>
           Information and content supplied by the UWA Archives and the UWA Historical Society.
         </p>
+        
+        <p>
+          The copying and use of any historical photos and text, unless otherwise stated, must fully acknowledge the UWA Archives intellectual property. Please ensure that the P number and accompanying title of each image is displayed with the photo.
+        </p>
 
         <p>
           For further information contact: <a href="mailto: uwahs@uwa.edu.au">uwahs@uwa.edu.au</a> or visit our website
-          at: <a href="https://www.web.uwa.edu.au/uwahs" target="_blank">www.web.uwa.edu.au/uwahs</a>
+          at: <a href="https://www.web.uwa.edu.au/uwahs" target="_blank">www.web.uwa.edu.au/uwahs</a>.
+        </p>
+
+        <p>
+          The code for this application is open source and available on <a href="https://github.com/Drewbi/buildings-in-landscape-uwa" target="_blank">Github</a>.
         </p>
         <svg
           id="poiClose"
